Carousel Caption Contrast fix

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -28,3 +28,7 @@ $custom-outline-color: #7b00ff;
     align-content: center;
     flex-direction: column;
 }
+
+.text_border{
+    text-shadow: 0 0 2px rgb(0, 0, 0);
+}
